# js/src/resources/coupons/coupons.ts
@@ -13,7 +13,8 @@ export class CouponResource {
     const query: Record<string, string | undefined> = {
       search: args.search,
       limit: args.limit?.toString(),
-      skip: args.skip?.toString(),
+      starting_after: args.starting_after,
+      ending_before: args.ending_before,
     };
 
     return this.client.request<CouponList>({
